# src/docs/swagger-generated.json
@@ -277,6 +277,41 @@
         }
       }
     },
+      "/api/user/getPagination": {
+  "get": {
+    "summary": "Obtiene usuarios paginados",
+    "parameters": [
+      { "in": "query", "name": "page", "schema": { "type": "integer", "default": 1 } },
+      { "in": "query", "name": "limit", "schema": { "type": "integer", "default": 10 } },
+      { "in": "query", "name": "search", "schema": { "type": "string" } },
+      { "in": "query", "name": "sortBy", "schema": { "type": "string" } },
+      { "in": "query", "name": "sortOrder", "schema": { "type": "string", "enum": ["asc", "desc"] } }
+    ],
+    "responses": {
+      "200": {
+        "description": "Lista paginada de usuarios",
+        "content": {
+          "application/json": {
+            "schema": {
+              "type": "object",
+              "properties": {
+                "data": {
+                  "type": "array",
+                  "items": { "$ref": "#/components/schemas/usuarioSchema" }
+                },
+                "total": { "type": "integer" },
+                "totalPages": { "type": "integer" },
+                "currentPage": { "type": "integer" }
+              }
+            }
+          }
+        }
+      },
+      "500": { "description": "Error del servidor" }
+    }
+  }
+}
+,
     "/api/post/findAll": {
       "get": {
         "description": "",
