# src/routes/User.routes.ts
@@ -43,9 +43,42 @@ router.route('/:id')
   userController.deactivate(req, res);
 })
 
-/* router.get('/getPagination', (req: Request, res: Response) => {
-  userController.getPagination(req, res);
-});
+/**
+ * @swagger
+ * /users/getPagination:
+ *   get:
+ *     summary: Obtiene usuarios paginados
+ *     parameters:
+ *       - in: query
+ *         name: page
+ *         schema:
+ *           type: integer
+ *           default: 1
+ *       - in: query
+ *         name: limit
+ *         schema:
+ *           type: integer
+ *           default: 10
+ *       - in: query
+ *         name: search
+ *         schema:
+ *           type: string
+ *       - in: query
+ *         name: sortBy
+ *         schema:
+ *           type: string
+ *       - in: query
+ *         name: sortOrder
+ *         schema:
+ *           type: string
+ *           enum: [asc, desc]
+ *     responses:
+ *       200:
+ *         description: Lista paginada de usuarios
  */
+router.get('/getPagination', (req: Request, res: Response) => {
+    userController.getPagination(req, res);
+});
+
 
 export default router
